# ray_tracing

./: .clang-format  .clang-tidy  .gdbinit  .gitignore  .gitmodules  .lldbinit  CMakeLists.txt  brew.txt  conanfile.txt  output.txt
.github/workflows/: ci-conan.yml
app/: CMakeLists.txt  main.cpp
ci/scripts/: clang-format.sh  configure.conan.macos.sh  debug.conan.macos.sh  gen_docs.sh  relwithdebinfo.conan.macos.sh  test.conan.macos.sh
cmake/: FindBoostMath.cmake  FindClangFormat.cmake  FindEigen.cmake  FindFmt.cmake  FindGoogleTest.cmake  FindLodePNG.cmake  FindRange-v3.cmake  FindSpdlog.cmake
examples/: CMakeLists.txt  all_examples.cpp  all_unit_tests.cpp  bit_donut.cpp  block.cpp  chessboard.cpp  cuboid.cpp  cylinder.cpp  dodecahedron_overlap.cpp  draw_sphere.cpp  example.cpp  example.hpp  kaleidoscope.cpp  set_difference.cpp  set_intersection.cpp  sphere.cpp  spheroid.cpp  torus.cpp
include/: CMakeLists.txt  public.hpp
scripts/: build.sh  configure.sh  run.sh
src/: CMakeLists.txt  algebra.cpp  algebra.hpp  binary.cpp  binary.hpp  block.cpp  block.hpp  camera.cpp  camera.hpp  chessboard.cpp  chessboard.hpp  color.cpp  color.hpp  common_constants.hpp  constants.hpp  cuboid.cpp  cylinder.cpp  cylinder.hpp  dodecahedron.cpp  floating_point_comparisons.hpp  geometric.cpp  geometric.hpp  icosahedron.cpp  image_renderer.cpp  image_renderer.hpp  imager.cpp  imager.hpp  imager_buffer.cpp  imager_buffer.hpp  intersection.cpp  intersection.hpp  light_source.cpp  light_source.hpp  material.cpp  material.hpp  optical_constants.hpp  optics.cpp  optics.hpp  owning_container.hpp  planet.cpp  (+43 more)
src/constants/: common.hpp  indexes_of_refraction.hpp
src/owning_container/: concepts.hpp
src/owning_container/concepts/: smart_pointer_concept.hpp  stl_container_concept.hpp
tests/unit/: CMakeLists.txt
tests/unit/algebra/: algebra_test.cpp  algebra_test.hpp  complex_test.cpp  cubic_test.cpp  linear_equation_system.cpp  quadratic_test.cpp
tests/unit/camera/catch2/: view_matrix.test.cpp  viewport.test.cpp
tests/unit/color/: color_test.cpp  color_test.hpp
tests/unit/concrete_block/: large_cuboid_test.cpp  small_cuboid_test.cpp
tests/unit/geometric/catch2/: reflect.test.cpp  reflectance.test.cpp  refract.test.cpp
tests/unit/geometric/gtest/: refract.test.cpp
tests/unit/intersection/: intersection_test.cpp  intersection_test.hpp  pick_closest_intersection_test.cpp  pick_closest_intersection_test.hpp
tests/unit/lodepng/: CMakeLists.txt  encode.cpp
tests/unit/optics/: balance_matte_gloss.cpp  optics_constructor_test.cpp  optics_test.cpp  optics_test.hpp
tests/unit/owning_collection/: construction.test.cpp
tests/unit/solid_object/catch2/: object_list_hit.test.cpp  single_object_hit.test.cpp
tests/unit/vector/: vector.test.cpp  vector_test.cpp  vector_test.hpp
